--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,6 @@
 /* 
   Note: The styles for this gradient grid background is heavily inspired by the creator of this amazing site (https://dub.sh) – all credits go to them! 
 */
-
 .main {
   width: 100vw;
   min-height: 100vh;
@@ -16,6 +15,8 @@
   justify-content: center;
   padding: 120px 24px 160px 24px;
   pointer-events: none;
+  /* background-color: #00FF00; This sets the background color to green */
+
 }
 
 .main:before {
